--- a/requirements.txt
+++ b/requirements.txt
@@ -15,3 +15,6 @@ psycopg2-binary==2.9.10
 SQLAlchemy==2.0.40
 typing_extensions==4.13.2
 Werkzeug==3.1.3
+python-dotenv>=1.0.0
+requests>=2.31.0
+tenacity>=8.2.3
